add pojos for transporting data between layers, remove spring-data-jpa from all modules except db-impl, adjust tests